# planner_of_plana

BA Planner/v6/: .gitignore  AGENTS.md  README.md  STUDENT_PLANNER_HANDOFF.md  TODO.md  config.json  main.py  requirements.txt  run_inventory_grid_match_inspector.bat  run_student_template_extractor.bat  run_template_alignment_studio.bat  run_ui_component_studio.bat  (+2 more)
BA Planner/v7/backend/: README.md  pyproject.toml
BA Planner/v7/backend/core/: __init__.py  application_protocol_v1.py  backend_process.py  inventory_catalog.py  jsonl_multiplexer.py  plan_shortages.py  planning_calc.py  protocol_v1.py  recognition_assets.py  repository_dto.py  repository_merge.py  repository_protocol_v1.py  repository_store.py  runtime_paths.py  scanner_matchers.py  scanner_protocol_v1.py  scanner_runtime.py  scanner_session.py  stdio_server.py  student_meta.py  student_meta_data.py  tactical_protocol_v1.py  tactical_store.py  windows_scanner_adapter.py
BA Planner/v7/backend/core/recognition_assets/: manifest.json
BA Planner/v7/backend/tests/: scanner_e2e_backend.py  test_inventory_catalog.py  test_inventory_protocol.py  test_plan_shortages.py  test_planning_parity.py  test_planning_protocol_contract.py  test_recognition_assets.py  test_repository_parity.py  test_repository_persistence.py  test_repository_protocol_contract.py  test_scanner_production_adapters.py  test_scanner_protocol_contract.py  test_scanner_session.py  test_scanner_stdio_transport.py  test_stdio_protocol_server.py  test_student_catalog.py  test_tactical_persistence.py  test_tactical_protocol_contract.py
(+425 files in other folders)
