[project]
name = "ba-planner-v7-backend"
version = "0.1.0"
description = "Headless Python backend for BA Planner v7"
requires-python = ">=3.11"
dependencies = ["Pillow>=10,<13"]

[project.optional-dependencies]
test = ["jsonschema>=4.18,<5"]

[project.scripts]
ba-planner-backend = "core.backend_process:main"

[tool.setuptools]
packages = ["core"]

[tool.setuptools.package-data]
core = ["recognition_assets/**/*"]
